# bot-enhanced

./: .env.backup  .env.bak  .gitignore  Cargo.toml  KNOWLEDGE.md  README.md  TICKET-001-POOLS-UPDATE.md  borrowers.json  enosys_engine.rs  enosys_engine.rs.bak.1772334287  fund_bot3.js  kinetic_engine.rs  kojo_flare.rs  kojo_flare.rs.bak.1772334278  kojo_fsniper.rs  kojo_monitor.rs  morpho_borrowers.json  morpho_engine.rs  soul.md
logs/bot3-momentum/: 2026-03-02.log.1  2026-03-03.log.1  2026-03-04.log.1  2026-03-05.log.1  2026-03-06.log.1  2026-03-07.log.1  2026-03-08.log.1  2026-03-09.log.1
logs/kojo-flare/: 2026-03-02.log.1  2026-03-03.log.1  2026-03-04.log.1  2026-03-05.log.1  2026-03-06.log.1  2026-03-07.log.1  2026-03-08.log.1  2026-03-09.log.1
logs/kojo-monitor/: 2026-03-02.log.1  2026-03-03.log.1  2026-03-04.log.1  2026-03-05.log.1  2026-03-06.log.1  2026-03-08.log.1
logs/kojo-trader/: 2026-03-02.log.1
logs/morpho/: 2026-03-02.log.1  2026-03-03.log.1  2026-03-04.log.1  2026-03-05.log.1  2026-03-06.log.1  2026-03-07.log.1  2026-03-08.log.1  2026-03-09.log.1
src/: lib.rs
